--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,8 @@
 html,
 body {
   padding: 0;
-  background: #F8FAFC;
+  /* background: #F8FAFC; */
+  background: #F5F7FD;
   margin: 0;
   overflow-x: hidden;
   font-size: .94rem;
