--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   padding: 0;
   /* background: #F8FAFC; */
   /* background: #F5F7FD; */
+  /* background: #FFFEFC; */
   background: #F5F8FF;
   margin: 0;
   overflow-x: hidden;
@@ -26,6 +27,10 @@ a {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  /* animation: sideMenu .2s linear; */
 }
 
 ::-webkit-scrollbar {
@@ -63,4 +68,11 @@ a {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+html input,
+html textarea {
+  user-select: all;
+  -webkit-user-select: all;
+  -moz-user-select: all;
 }
