--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,14 +7,10 @@
 html,
 body {
   padding: 0;
-  /* background: #F8FAFC; */
-  /* background: #F5F7FD; */
-  /* background: #FFFEFC; */
   background: #F5F8FF;
   margin: 0;
   overflow-x: hidden;
   font-size: .94rem;
-  /* min-height: 100vh; */
 }
 
 a {
@@ -30,7 +26,6 @@ a {
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
-  /* animation: sideMenu .2s linear; */
 }
 
 ::-webkit-scrollbar {
@@ -72,7 +67,7 @@ a {
 
 html input,
 html textarea {
-  user-select: all;
-  -webkit-user-select: all;
-  -moz-user-select: all;
+  user-select: text;
+  -webkit-user-select: text;
+  -moz-user-select: text;
 }
