--- a/styles/globals.css
+++ b/styles/globals.css
@@ -102,6 +102,7 @@ h5,
 h6,
 b,
 .bold-font {
+  /* font-weight: 100; */
   font-family: 'CeraPro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
