--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,9 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,500;1,600;1,700;1,800;1,900&family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+
+
 
 @font-face {
   font-family: "CalFonts";
@@ -148,4 +151,14 @@ b,
 
 .lockable {
   background: linear-gradient(to bottom, #ffffffb8, white);
+}
+
+.gallery-grid {
+  column-count: 3;
+}
+
+@media screen and (max-width:580px) {
+  .gallery-grid {
+    column-count: 1;
+  }
 }
