--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
 
-
-
 @font-face {
   font-family: "CalFonts";
   src: local("CalFonts"),
@@ -19,6 +17,12 @@
   font-family: "CeraPro";
   src: local("CeraPro"),
     url("../assets/fonts/cera-pro bold.otf")
+}
+
+@font-face {
+  font-family: "Cookie";
+  src: local("Cookie"),
+    url("../assets/fonts/Cookie-Regular.ttf")
 }
 
 @font-face {
