--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ body {
   padding: 0;
   /* background: #F3F4F6; */
   /* background: #F5F8FF; */
+  background: #F0F0F0;
   margin: 0;
   overflow-x: hidden;
   font-size: .94rem;
@@ -146,7 +147,8 @@ b,
 }
 
 .lockable {
-  background: linear-gradient(to bottom, #ffffffb8, white);
+  /* background: linear-gradient(to bottom, #ffffffb8, white); */
+  background: #f0f0f0c0;
 }
 
 /* .gallery-grid {
